# MLOPS_END_TO_END_PROJECT

./: README.md  app.py  conda_commands.txt  init_setup.sh  project_flow.txt  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py
experiment/: experiments.ipynb
mlops_env/Scripts/: dul-receive-pack  dul-upload-pack  numba  pygrun
mlops_env/conda-meta/: ca-certificates-2024.3.11-haa95532_0.json  history  libffi-3.4.4-hd77b12b_1.json  openssl-3.0.13-h2bbff1b_2.json  pip-24.0-py38haa95532_0.json  python-3.8.19-h1aa4202_0.json  setuptools-69.5.1-py38haa95532_0.json  sqlite-3.45.3-h2bbff1b_0.json  vc-14.2-h2eaa2aa_1.json  vs2015_runtime-14.29.30133-h43f2093_3.json  wheel-0.43.0-py38haa95532_0.json
mlops_env/etc/: aau_token
src/components/: data_ingestion.py  data_transformation.py  model_evaluation.py  model_trainer.py
src/exception/: exception.py
src/logger/: logging.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
src/utils/: utils.py
templates/: form.html  index.html  result.html
tests/integration/: integration.py
tests/unit/: unit.py
