[metadata]
# Metadata about the project
license = MIT  # License type
license_file = LICENSE  # Path to the license file
classifiers =
    # List of classifiers for the project
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
# Options for the project
install_requires =
    # List of required packages
    ensure==1.0.2
    py-youtube==1.1.7
python_requires = >=3.7  # Minimum Python version required by the project

[options.extras_require]
# Additional requirements for testing
testing =
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1
    black>=22.8.0

[options.package_data]
# Additional package data to include
MongoDB-Connect = py.typed  # Include type hints for MongoDB-Connect package

[flake8]
# Flake8 configuration
max-line-length = 160  # Maximum line length allowed
exclude = __init__.py  # Exclude __init__.py files from Flake8 checks
